@@ -136,11 +136,8 @@ bool CGUIDialogHost::OnMessage(CGUIMessage& message)
 
 void CGUIDialogHost::Update()
 {
-  CONTROL_ENABLE_ON_CONDITION(CTL_LABEL_PLAYER_LIMIT, !m_bPrivate);
   CONTROL_ENABLE_ON_CONDITION(CTL_SPIN_PLAYER_LIMIT, m_bPrivate);
-  CONTROL_ENABLE_ON_CONDITION(CTL_LABEL_PASSWORD, !m_bPrivate);
   CONTROL_ENABLE_ON_CONDITION(CTL_BUTTON_PASSWORD, m_bPrivate);
-  CONTROL_ENABLE_ON_CONDITION(CTL_LABEL_DESCRIPTION, !m_bPrivate);
   CONTROL_ENABLE_ON_CONDITION(CTL_BUTTON_DESCRIPTION, m_bPrivate);
 
   SET_CONTROL_LABEL(CTL_BUTTON_DESCRIPTION, m_strDescription);
